nobase_include_HEADERS = \
	common.h \
	exploits.h \
	libirecovery.h \
	libpartial.h \
	libpois0n.h \
	payloads.h \
	resources/ramdisk.h \
	payloads/iBoot.k48ap.h \
	payloads/iBoot.k66ap.h \
	payloads/iBoot.n18ap.h \
	payloads/iBoot.n72ap.h \
	payloads/iBoot.n81ap.h \
	payloads/iBoot.n88ap.h \
	payloads/iBoot.n90ap.h \
	payloads/iBSS.k48ap.h \
	payloads/iBSS.k66ap.h \
	payloads/iBSS.n18ap.h \
	payloads/iBSS.n72ap.h \
	payloads/iBSS.n81ap.h \
	payloads/iBSS.n88ap.h \
	payloads/iBSS.n90ap.h

nobase_dist_noinst_HEADERS = \
	Win32/getopt.h \
	Win32/inttypes.h \
	Win32/libgen.h \
	Win32/stdbool.h \
	Win32/unistd.h \
	libusb-1.0/config.h \
	libusb-1.0/libusb.h \
	libusb-1.0/libusbi.h \
	libusb-1.0/os/darwin_usb.h \
	libusb-1.0/os/linux_usbfs.h
